# blockify-agentic-data-optimization

./: CONTRIBUTING.md  ENTERPRISE.md  LICENSE  README.md  SECURITY.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
blockify-distillation-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blockify-distillation-service/app/: __init__.py  api.py  config.py  jobs.py  models.py  service.py
blockify-distillation-service/app/db/: __init__.py  base.py  factory.py  filesystem.py  sqlite.py
blockify-distillation-service/app/dedupe/: __init__.py  algorithm.py  embeddings.py  lsh.py  similarity.py
blockify-distillation-service/app/llm/: __init__.py  blockify.py  schemas.py
blockify-distillation-service/app/utils/: logging.py
blockify-distillation-service/helm/blockify-distillation/: Chart.yaml  values.yaml
blockify-distillation-service/helm/blockify-distillation/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
blockify-distillation-service/tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_lsh.py  test_similarity.py
blockify-skill-for-claude-code/: .env.example  .gitignore  CLAUDE_DEPLOYMENT_NOTES.md  LICENSE  README.md
blockify-skill-for-claude-code/skills/blockify-integration/: BENCHMARK-GUIDE.md  SKILL.md  requirements.txt
blockify-skill-for-claude-code/skills/blockify-integration/config/: benchmark_config.yaml
blockify-skill-for-claude-code/skills/blockify-integration/references/: API.md  DISTILLATION.md  SCHEMA.md
blockify-skill-for-claude-code/skills/blockify-integration/scripts/: blockify_distill.py  blockify_ingest.py  setup_check.py  (+7 more)
documentation/: ARCHITECTURE-END-TO-END.md  BLOCKIFY-API-REFERENCE.md  BLOCKIFY-DEEP-DIVE.md  CLAUDE-CODE-BLOCKIFY-SKILL.md  CLAWDBOT-RAG-INTEGRATION.md  DISTILLATION-SERVICE.md  GETTING-STARTED-GUIDE.md  IDEABLOCK-STRUCTURE.md  LOCAL-VECTOR-DATABASE-SETUP.md  OPENCLAW-RAG-INTEGRATION.md  RAG-AGENTIC-SEARCH-RESEARCH.md
documentation/integrations/: BLOCKIFY-CLOUDFLARE.md  BLOCKIFY-ELASTIC.md  BLOCKIFY-KIBANA.md  BLOCKIFY-LANGCHAIN.md  BLOCKIFY-LLAMAINDEX.md  BLOCKIFY-MILVUS.md  BLOCKIFY-N8N.md  BLOCKIFY-OBSIDIAN.md  BLOCKIFY-STARBURST.md  BLOCKIFY-SUPABASE.md  BLOCKIFY-UNSTRUCTURED.md  BLOCKIFY-ZILLIZ.md  README.md
(+28 files in other folders)
